[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindful-webui"
version = "25.1"
authors = [
  { name="ikmalsaid", email="ikmalsaid@gmail.com" },
]
description = "A Gradio-based web interface for Mindful clients."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
  "mindful-client",
  "gradio==4.38.1"
  "fastapi==0.112.4"
]
keywords = [
  "mindful-webui",
  "mindful_webui"
]

[project.urls]
Homepage = "https://github.com/ikmalsaid/mindful-webui"
Issues = "https://github.com/ikmalsaid/mindful-webui/issues"